<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SHERA</string>
    <string name="hello_world">Hello world!</string>
    <string name="chats">Chats</string>
    <string name="title_activity_map">Map</string>
    <string name="LogIn">Log in</string>
    <string name="create_event_string">Create Event</string>
    <string name="title_activity_event_creator">EventCreator</string>
    <string name="title_activity_events">Events</string>
    <string name="title_activity_event">Event</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="participants">Number of participants</string>
    <string name="pickDate">Pick date</string>
    <string name="pickTime">Pick time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="when">When?</string>
    <string name="where">Where?</string>
    <string name="title">Title</string>
    <string name="title_facebook_login">Login</string>
    <string name="logout">Log out</string>
    <string name="adult">Adult</string>
    <string name="casual">Casual</string>
    <string name="family">Family</string>
    <string name="hobby">Hobby</string>
    <string name="sports">Sports</string>
    <string name="cultural">Cultural</string>
    <string name="category_prompt">Choose a category</string>
    <string name="event_saved">The event was saved</string>
    <string name="pin_new_event">New event</string>
    <string name="pin_creation_info">Click here to create new event!</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="main_menu">Menu</string>
    <string name="edit">Edit</string>
    <string name="join">Join</string>
    <string name="unjoin">Leave</string>
    <string name="search">Search</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="chat_hint">Type here</string>
    <string name="event_banner_image" translatable="false">Event banner image</string>
    <string name="event_creator_chosen_image" translatable="false">Event banner image</string>
    <string name="blank"> </string>
    <string name="logged_in">Logged in as</string>
    <string name="days_ahead">Days ahead:</string>
    <string name="all">All</string>
    <string name="radius">Radius:</string>
    <string name="no_limit">No limit</string>
    <string name="kilometers">km</string>

    <string name="name_error">Name can not be blank. </string>
    <string name="description_error">Description can not be blank. </string>
    <string name="address_error">Address can not be blank. </string>
    <string name="participants_error">Number of participants can not be blank. </string>
    <string name="participants_num_error">Number of participants must be one or more. </string>
    <string name="calendar_error">Event can not be in the past.</string>
    <string name="max_less_than_num_error">Max participants can\'t be less than number of
        participants already attending.</string>
    <string name="location_error">Problems retrieving the location from the address</string>
    <string name="write_to_db_error">Problems writing to the database</string>

    <string name="cancelled">One of the events you were attending has been cancelled</string>


    <string name="show">SHOW</string>
    <string name="find_photo">Find photo</string>
    <string name="choose_picture">Choose picture</string>
    <string name="loading" translatable="false">Loading&#8230;</string>
    <string name="download_from_facebook">Loading images from Facebook</string>
    <string name="download_friends_profile_pictures_facebook">
        Loading profile pictures from Facebook</string>
    <string name="change_photo">Change photo</string>
    <string name="are_you_sure">Are you sure you want to delete?</string>
    <string name="title_activity_chat">Chat</string>
    <string name="chat">Chat</string>
    <string name="chat_send">Send</string>
    <string name="abort_photo_download">Cancel</string>
    <string name="double_tap_to_finish">Press back again to exit the app</string>
    <string name="no_address_on_these_coordinates">No address on these coordinates</string>
    <string name="destination_error">There is something wrong with your destination</string>
    <string name="user_id_error">There is something wrong with your userID, try again later</string>
    <string name="shera_logo">SHERA Logo</string>

</resources>
