<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="no.gruppe2.shera.view.EventView">

    <item
        android:id="@+id/chat_button"
        android:title="@string/chat"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/change_button"
        android:title="@string/edit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/join_button"
        android:title="@string/join"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="false" />

    <item
        android:id="@+id/unjoin_button"
        android:title="@string/unjoin"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false" />

    <item
        android:id="@+id/delete_button"
        android:title="@string/delete"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:visible="false" />
</menu>
