<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="no.gruppe2.shera.Map">


    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/new_event_option"
        android:title="@string/create_event_string"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/events_option"
        android:title="@string/title_activity_events"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/event_option"
        android:title="@string/title_activity_event"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout_option"
        android:title="@string/logout"
        android:orderInCategory="500"
        app:showAsAction="never" />
</menu>
