<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/nameInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/descriptionInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/addressInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/participants"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/participantsInputField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/participants"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/pickTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickTime"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/pickDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickDate"/>

    </LinearLayout>

</LinearLayout>
